--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="mod2_solution/CSS/style.css">
 </head>
 <body>
 
