--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         Your final result should look very close to this mockup.
         Curious which components explicitly require jQuery, our JS, and Popper.js?
         Click the show components link below.
-        If you’re at all unsure about the general page structure, keep reading for an example page template.      </section>
+        If you’re at all unsure about the general page structure, keep reading for an example page template.
+      
+        Here is the mockup illustration of the desktop version of the site. 
+        Your final result should look very close to this mockup.
+        Curious which components explicitly require jQuery, our JS, and Popper.js?
+        Click the show components link below.
+        If you’re at all unsure about the general page structure, keep reading for an example page template.
+      </section>
       <section class = "col-lg-3 col-md-3 col-sm-3">
         <p id="p3">Three</p>
         <br><br>
