--- a/index.html
+++ b/index.html
@@ -10,39 +10,37 @@
 
     <h1 >Our Menu</h1>
 
-  <div class="d">
-      <section class = "col-lg-1 col-md-1 col-sm-1">
-        <p id="p1">One</p>
-        <br><br>
-        Here is the mockup illustration of the desktop version of the site. 
-        Your final result should look very close to this mockup.
-        Curious which components explicitly require jQuery, our JS, and Popper.js?
-        Click the show components link below.
-        If you’re at all unsure about the general page structure, keep reading for an example page template.
-      </section>
-      <section class = "col-lg-2 col-md-2 col-sm-2">
-        <p id="p2">Two</p>
-        <br><br>
-        Here is the mockup illustration of the desktop version of the site. 
-        Your final result should look very close to this mockup.
-        Curious which components explicitly require jQuery, our JS, and Popper.js?
-        Click the show components link below.
-        If you’re at all unsure about the general page structure, keep reading for an example page template.
-      
-        Here is the mockup illustration of the desktop version of the site. 
-        Your final result should look very close to this mockup.
-        Curious which components explicitly require jQuery, our JS, and Popper.js?
-        Click the show components link below.
-        If you’re at all unsure about the general page structure, keep reading for an example page template.
-      </section>
-      <section class = "col-lg-3 col-md-3 col-sm-3">
-        <p id="p3">Three</p>
-        <br><br>
-        Here is the mockup illustration of the desktop version of the site. 
-        Your final result should look very close to this mockup.
-        Curious which components explicitly require jQuery, our JS, and Popper.js?
-        Click the show components link below.
-        If you’re at all unsure about the general page structure, keep reading for an example page template.      </section>
+  <div class="row">
+
+      <div class = "container col-lg-1 col-md-1 col-sm-1">
+        <section>
+          <p id="p1">One</p>
+          <br><br>
+          My Media query is not working right! Can you suggest me how to fix it? <br> <br> <br>
+          Please leave a comment!
+          
+        </section>
+      </div>
+
+      <div class = "container col-lg-2 col-md-2 col-sm-2">
+        <section>
+          <p id="p2">Two</p>
+          <br><br>
+          It's working accoriding to the assignment statement but not according to my css file. <br> <br>
+          Desktop view : 1102px working like 992px  and 
+          Tablet view  : 853px working like 768px
+        </section>
+      </div>
+
+      <div class = "container col-lg-3 col-md-3 col-sm-3">
+        <section>
+          <p id="p3">Three</p>
+          <br><br>
+          Contradiction at 1102px which is common in both tablet and desktop version! If i lower it 1101px for tablet version, it's not working right!
+          what is the reason behind? <br> Please leave a comment!
+        </section>       
+      </div>
+
   </div>
 </body>
 </html>
