again layout fixed

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <section>
           <p id="p1">One</p>
           <br><br>
-          My Media query is not working right! Can you suggest me how to fix it? <br> <br> <br>
-          Please leave a comment!
+          Layout: In the mobile view (equal to or less than 767px), each section should take up the entire row. For a visual reference of this view, see the mobile mockup illustration below.
           
         </section>
       </div>
@@ -26,9 +25,7 @@
         <section>
           <p id="p2">Two</p>
           <br><br>
-          It's working accoriding to the assignment statement but not according to my css file. <br> <br>
-          Desktop view : 1102px working like 992px  and 
-          Tablet view  : 853px working like 768px
+          Layout: In the mobile view (equal to or less than 767px), each section should take up the entire row. For a visual reference of this view, see the mobile mockup illustration below.
         </section>
       </div>
 
@@ -36,8 +33,7 @@
         <section>
           <p id="p3">Three</p>
           <br><br>
-          Contradiction at 1102px which is common in both tablet and desktop version! If i lower it 1101px for tablet version, it's not working right!
-          what is the reason behind? <br> Please leave a comment!
+          Layout: In the mobile view (equal to or less than 767px), each section should take up the entire row. For a visual reference of this view, see the mobile mockup illustration below.
         </section>       
       </div>
 
