--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
-  <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
-  <script src="script.js"></script>
+  <script src="mod4_solution/SpeakHello.js"></script>
+  <script src="mod4_solution/SpeakGoodBye.js"></script>
+  <script src="mod4_solution/script.js"></script>
 </head>
 <body>
   <h1 align = "center">Module 4 Solution Starter</h1>
