--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Module 4 Solution Starter</title>
   <script src="mod4_solution/SpeakHello.js"></script>
   <script src="mod4_solution/SpeakGoodBye.js"></script>
